fix: ubah sapaan menjadi dari Semangka, posisi kado di tengah, tambah credit Ryan

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Hai Semangka! 🍉 Sebuah surprise dari temanmu!"
+      content="Hai Kamu! 🍉Sema Sebuah surprise dari temanmu!"
     />
     <meta name="theme-color" content="#2D5016" />
     <title>Hai Semangka!</title>
